Gnome-shell Wayland fails to start with segfault at modifier-less driver
Using Debian Testing (trixie) : Linux debian 6.10.11-686-pae #1 SMP PREEMPT_DYNAMIC Debian 6.10.11-1 (2024-09-22) i686 GNU/Linux Graphics: 00:00.0 Host bridge: Intel Corporation Mobile 945GM/PM/GMS, 943/940GML and 945GT Express Memory Controller Hub (rev 03) Subsystem: Dell Mobile 945GM/PM/GMS, 943/940GML and 945GT Express Memory Controller Hub 00:02.0 VGA compatible controller: Intel Corporation Mobile 945GM/GMS, 943/940GML Express Integrated Graphics Controller (rev 03) Subsystem: Dell Mobile 945GM/GMS, 943/940GML Express Integrated Mesa 25.0.0-devel gnome-shell[9784]: Running GNOME Shell (using mutter 47.0) as a Wayland display server gnome-shell[9784]: Thread 'KMS thread' will be using real time scheduling gnome-shell[9784]: Device '/dev/dri/card0' prefers shadow buffer gnome-shell[9784]: Added device '/dev/dri/card0' (i915) using non-atomic mode setting. gnome-shell[9784]: Failed to initialize accelerated iGPU/dGPU framebuffer sharing: KMS CRTC doesn't support GBM format gnome-shell[9784]: Created gbm renderer for '/dev/dri/card0' gnome-shell[9784]: Boot VGA GPU /dev/dri/card0 selected as primary gnome-shell[9784]: Using public X11 display :1024, (using :1025 for managed services) gnome-shell[9784]: Using Wayland display name 'wayland-0' gnome-shell[9784]: Will monitor session c2 gnome-shell[9784]: Error looking up permission: GDBus.Error:org.freedesktop.portal.Error.NotFound: No entry for geolocation gnome-shell[9784]: Failed to query buffer age, got error 3003 kernel: gnome-shell[9784]: segfault at 8 ip ab9e116d sp bfd27330 error 4 in libgallium-25.0.0-devel.so[4c16d,ab9c1000+89f000] likely on CPU 1 (core 1, socket 0) kernel: Code: ec 18 e8 5d 66 fe ff 05 aa 8e 0e 01 8b 45 10 8b 40 04 85 c0 74 78 8b 45 10 0f b6 40 02 84 c0 74 6d 8b 45 10 8b 40 04 8b 40 34 <8b> 40 08 89 45 f4 8b 45 f4 0f b7 40 46 66 83 f8 01 75 54 8b 45 f4 (gdb) f 0 #0 do_discard_framebuffer (ctx=0xa08d3010, fb=0x1344180, att=0x13442e8) at ../src/mesa/main/fbobject.c:5483 5483 prsc = att->Renderbuffer->surface->texture; gdb) p att->Renderbuffer->surface $3 = (struct pipe_surface *) 0x0
The latest MR at this version is !32294 (merged). A previous version of 25.0.0-devel with latest MR !32269 (merged) has no problem.
The backtrace of the coredump is attached to this issue. gnome-shell_bt.txt ~